# lsof

./: .clang-format  .gitignore  00MANIFEST  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Configure  Makefile  README.md  arg.c  build_banner.sh  lsof  lsof.1  lsof.h  lsof_fields.h  misc.c  print.c  proc.c  proto.h  run_bench.sh  run_check.sh  store.c  usage.c
Testing/Temporary/: CTestCostData.txt
bench/: banner.sh  bench.h  bench_core.c  bench_datastruct.c  bench_environ.c  bench_framework.h  bench_hash.c  bench_hex.c  bench_memory.c  bench_optduel.c  bench_output.c  bench_sort.c  bench_strbuild.c  bench_strops.c  bench_strsafe.c  bench_syscall.c  run_benchmarks.sh
completions/: _lsofng
dialects/aix/: dnode.c  dnode2.c  dproc.c  dproto.h  dsock.c  dstore.c
dialects/aix/aix5/j2/: j2_lock.h  private_j2_snapshot.h
dialects/darwin/kmem/: dnode1.c  dproc.c  dproto.h  dstore.c
dialects/darwin/libproc/: ddev.c  dfile.c  dlsof.h  dsock.c  machine.h
dialects/du/: ddev.c  dlsof.h  dmnt.c  dproc.c  dstore.c
dialects/freebsd/: dmnt.c  dproc.c  dproto.h  dsock.c  dzfs.h  machine.h
dialects/hpux/kmem/: dfile.c  dlsof.h  dmnt.c  dnode.c  dproto.h  dsock.c  dstore.c  machine.h
dialects/hpux/kmem/hpux11/: ipc_s.h  kernbits.h  nfs_clnt.h  proc.h  rnode.h  vnode.h
dialects/hpux/pstat/: dfile.c  dlsof.h  dsock.c  machine.h
dialects/linux/: dfile.c  dlsof.h  dproc.c  dproto.h  dstore.c
dialects/n+obsd/: dmnt.c  dsock.c  dstore.c
dialects/n+os/: dlsof.h  dproc.c  machine.h
dialects/osr/: dnode.c  dproc.c  dsock.c  machine.h
dialects/osr/include/sys/: cdefs.h
dialects/sun/: dfile.c  dlsof.h  dproc.c
dialects/uw/: dmnt.c  dnode.c  dnode1.c  dnode2.c  dproc.c  dproto.h  dsock.c
dialects/uw/uw7/fs/nsc_cfs/: cnode.h
dialects/uw/uw7/sys/fs/: fifonode.h
lib/: cvfs.c  isfn.c  lkud.c  pdvn.c  regex.c  rmnt.c  rnam.c  rnch.c  rnmh.c
scripts/: banner.sh  big_brother.perl5  count_pf.perl  count_pf.perl5  identd.perl5  idrlogin.perl  idrlogin.perl5  list_NULf.perl5  list_fields.perl  shared.perl5  sort_res.perl5  watch_a_file.perl
src/: arg.c  delta.c  dlsof.h  dproto.h  follow.c  json.c  leak.c  lsof.h  lsof_fields.h  machine.h  main.c  misc.c  monitor.c  node.c  print.c  proc.c  proto.h  regex.h  store.c  summary.c  usage.c  util.c  version.h
src/dialects/aix/: Makefile  Mksrc  ddev.c  dfile.c  dlsof.h  dmnt.c  dnode.c  dnode1.c  dnode2.c  dproc.c  dproto.h  dsock.c  dstore.c  machine.h
src/dialects/aix/aix5/: README
src/dialects/aix/aix5/j2/: j2_lock.h  private_j2_snapshot.h
src/dialects/darwin/kmem/: Makefile  Mksrc  ddev.c  dfile.c  dlsof.h  dmnt.c  dnode.c  dnode1.c  dproc.c  dproto.h  dsock.c  dstore.c  machine.h
src/dialects/darwin/libproc/: Makefile  Mksrc  ddev.c  dfile.c  dlsof.h  dmnt.c  dproc.c  dproto.h  dsock.c  dstore.c  machine.h
src/dialects/du/: Makefile  Mksrc  ddev.c  dfile.c  dlsof.h  dmnt.c  dnode.c  dproc.c  dproto.h  dsock.c  dstore.c  machine.h
src/dialects/freebsd/: Makefile  Mksrc  dlsof.h  dmnt.c  dnode.c  dnode1.c  dnode2.c  dproc.c  dproto.h  dsock.c  dstore.c  dzfs.h  machine.h
src/dialects/freebsd/include/procfs/: pfsnode.h
src/dialects/hpux/kmem/: Makefile  Mksrc  dfile.c  dlsof.h  dmnt.c  dnode.c  dnode1.c  dnode2.c  dproc.c  dproto.h  dsock.c  dstore.c  machine.h
src/dialects/hpux/kmem/hpux11/: ipc_s.h  kernbits.h  lla.h  nfs_clnt.h  proc.h  rnode.h  sth.h  tcp_s.h  udp_s.h  vnode.h
src/dialects/hpux/pstat/: Makefile  Mksrc  dfile.c  dlsof.h  dproc.c  dproto.h  dsock.c  dstore.c  machine.h
src/dialects/linux/: Makefile  Mksrc  dfile.c  dlsof.h  dmnt.c  dnode.c  dproc.c  dproto.h  dsock.c  dstore.c  machine.h
src/dialects/n+obsd/: Makefile  Mksrc  dlsof.h  dmnt.c  dnode.c  dnode1.c  dproc.c  dproto.h  dsock.c  dstore.c  machine.h
src/dialects/n+os/: Makefile  Mksrc  dlsof.h  dnode.c  dnode1.c  dproc.c  dproto.h  dsock.c  dstore.c  machine.h
src/dialects/osr/: Makefile  Mksrc  dfile.c  dlsof.h  dmnt.c  dnode.c  dproc.c  dproto.h  dsock.c  dstore.c  machine.h
src/dialects/osr/include/: netdb.h
src/dialects/osr/include/sys/: cdefs.h
src/dialects/sun/: Makefile  Mksrc  ddev.c  dfile.c  dlsof.h  dmnt.c  dnode.c  dnode1.c  dnode2.c  dproc.c  dproto.h  dsock.c  dstore.c  machine.h
src/dialects/uw/: Makefile  Mksrc  dfile.c  dlsof.h  dmnt.c  dnode.c  dnode1.c  dnode2.c  dnode3.c  dproc.c  dproto.h  dsock.c  dstore.c  machine.h
src/dialects/uw/uw7/: README
src/dialects/uw/uw7/fs/nsc_cfs/: cnode.h
src/dialects/uw/uw7/fs/procfs/: README  prdata.h
src/dialects/uw/uw7/sys/fs/: README  fifonode.h  namenode.h
src/lib/: ckkv.c  cvfs.c  dvch.c  fino.c  isfn.c  lkud.c  pdvn.c  prfp.c  ptti.c  rdev.c  regex.c  rmnt.c  rnam.c  rnch.c  rnmh.c  snpf.c
test/: banner.sh  run_check.sh  run_checks.sh  run_leakcheck.sh  test.h  test_framework.h  test_integration.c  test_stress.c  test_unit.c  test_unit_compare.h  test_unit_devhash.h  test_unit_devlookup.h  test_unit_environ.h  test_unit_fd.h  test_unit_fields.h  test_unit_follow.h  test_unit_format.h  test_unit_hash.h  test_unit_json.h  test_unit_leak.h  test_unit_memleak.h  test_unit_monitor.h  test_unit_network.h  test_unit_path.h  test_unit_portcache.h  test_unit_readlink.h  test_unit_regex.h  test_unit_stat.h  test_unit_stress.h  test_unit_strftime.h  test_unit_strings.h  test_unit_summary.h  test_unit_uid.h  test_unit_x2dev.h
tests/: LTbasic.c  LTbigf.c  LTdnlc.c  LTlib.c  LTlock.c  LTnfs.c  LTnlink.c  LTsock.c  LTszoff.c  LTunix.c  LsofTest.h  Makefile
